<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChatApp</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_continue_with">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="new_chat">New Chat</string>
    <string name="no_chats_yet">No conversations yet</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="type_a_message">Type a message</string>
</resources>